--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,14 +34,13 @@
                         <% for (let i = 0; i < feed.length; i++) { %>
                         <tr>
                             <td>
-                                <img src="<%=feed[i].image%>" width = 150px>
-                                
+                                <img src="<%= feed[i].image %>" width = 150px>
                             </td>
 
                             <td>
                                 <div><h3 ><%= feed[i].name %></h3></div>
-                                <div><p >Date: <%= feed[i].date %></p></div>
-                                <div><p >Duration: <%= feed[i].duration %> minutes <%= feed[i].duration %> seconds</p></div>
+                                <div><p>Date: <%= new Date(feed[i].date).toLocaleDateString() %></p></div>
+                                <div><p >Duration: <%= feed[i].duration %>:<%= feed[i].duration - 7 %></p></div>
                             </td>
                             <td>
                                 <a class="btn" href="/video/<%= feed[i].video_id %>/edit">
@@ -68,8 +67,8 @@
                         <label for="name">title: </label>
                         <input type="text" id="name" name="name">
 
-                        <label for= "date">date:</label>
-                        <input type = "date" id = "date" name = "date">
+                        <!-- <label for= "date">date:</label>
+                        <input type = "date" id = "date" name = "date"> -->
 
                         <div id="drop-zone"> 
                             <label for = "image">upload thumbnail: </label>
@@ -80,7 +79,7 @@
 
 
                         <div class="center">
-                            <input type="submit" value="upload video" class="btn deep-purple lighten-3 ">
+                            <input type="submit" value="upload video" class="btn grey ">
                         </div>
                         <p>
 
